
iconsdir = $(datadir)/icons/hicolor/16x16/apps
icons_DATA = \
	org.xfce.settings.accessibility.png		\
	org.xfce.settings.appearance.png		\
	org.xfce.settings.color.png		\
	org.xfce.settings.display.png		\
	org.xfce.settings.editor.png		\
	org.xfce.settings.keyboard.png		\
	org.xfce.settings.manager.png		\
	org.xfce.settings.mouse.png		\
	org.xfce.settings.preferred-applications.png

EXTRA_DIST = \
	$(icons_DATA)
