
iconsdir = $(datadir)/icons/hicolor/32x32/apps
icons_DATA = \
	org.xfce.filemanager.png	\
	org.xfce.mailreader.png	\
	org.xfce.terminalemulator.png	\
	org.xfce.webbrowser.png	\
	org.xfce.settings.accessibility.png		\
	org.xfce.settings.appearance.png		\
	org.xfce.settings.color.png		\
	org.xfce.settings.display.png		\
	org.xfce.settings.editor.png		\
	org.xfce.settings.keyboard.png		\
	org.xfce.settings.manager.png		\
	org.xfce.settings.mouse.png		\
	org.xfce.settings.default-applications.png

EXTRA_DIST = \
	$(icons_DATA)
